welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:5: error: not found: value couleurdelacase
      couleurdelacase = getCouleurSol()
      ^SlugTracking:6: error: not found: value couleurdelacase
      couleurdelacase match{
      ^SlugTracking:10: error: type mismatch;
 found   : Unit
 required: Boolean
        case _ =>
               ^SlugTracking:3: error: type mismatch;
 found   : Unit
 required: Boolean
  if ( estFaceMur == false ){
  ^